--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "git": "^0.1.5",
     "lucide-react": "^0.344.0",
     "openai": "^4.47.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "tiny-json-http": "^7.5.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
