--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "cors": "^2.8.5",
     "git": "^0.1.5",
     "lucide-react": "^0.344.0",
     "openai": "^4.47.1",
