--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   "dependencies": {
     "axios": "^1.7.2",
     "cors": "^2.8.5",
+    "file-saver": "^2.0.5",
     "git": "^0.1.5",
     "lucide-react": "^0.344.0",
     "openai": "^4.47.1",
+    "package": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
